Changed springfox-swagger2 to springfox-boot-starter, deleted mocks in IT