@@ -14,6 +14,7 @@ import org.springframework.web.bind.annotation.*;
 import javax.validation.Valid;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @RestController
 @RequiredArgsConstructor
@@ -37,7 +38,7 @@ public class PostController {
         List<Post> posts = postService.getAll();
         return posts.stream()
                     .map(postMapper:: toPostDto)
-                    .toList();
+                    .collect(Collectors.toList());
     }
 
     @PostMapping("/create")
